Session Management Unit Tests - Many are just stubs right now. Plus malformed json test which is not yet compiling in LearningRepositoryImplTest